--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
+                <li><a href="#services" class="menu-btn">Projects</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <!----<li><a href="#contact" class="menu-btn">Contact</a></li>-->
             </ul>
@@ -59,13 +59,13 @@
             <h2 class='title'>About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/logoka.png" alt="">
+                    <img src="images/meme.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm István and I'm a <span class="typing-2"></span></div>
                     <p>I am a fresh Multimedia Design & Communication graduate and currently taking a Web development Top-up program at EASV in Esbjerg.
                         I am currently seeking for student-job where I could gain valuable experience related to my studies</p>
-                    <a href="CVKE.pdf" download>Download CV</a>
+                    <a href="CV.pdf" download>Download CV</a>
                 </div>
 
 
@@ -80,28 +80,49 @@
     <section class="services" id="services">
         <div class="max-width">
             <h2 class='title'>Projects I have worked on</h2>
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <a href="https://bass-2019.netlify.app/index.html"><img class="d-block  w-50 " src="1stsemester.PNG" alt="First slide"></a>
-                    <h1>First semester projekt</h1>
-                    <p>Our task in this projekt was to create an interactive platform for kids to learn about space.</p>
-                    
+                    <a href="https://bass-2019.netlify.app/index.html"><img class="d-block w-75" src="1stsemester.PNG" alt="First slide"></a>
+                        <div class="desc">
+                            <h5>B.A.S.S</h5>
+                            <p>First semester exam project</p>
+                        </div>
                   </div>
                   <div class="carousel-item">
-                    <a href="https://educovid.netlify.app/"><img class="d-block w-50" src="2ndsemester.PNG" alt="Second slide"></a>
-                    <h1>Second semester projekt</h1>
-                    <p>In the spring of 2020 when the lockdowd was happening,we got this task to make a Covid information portal for students in Denmark.</p>
+                    <a href="https://educovid.netlify.app"><img class="d-block w-75" src="2ndsemester.PNG" alt="Second slide"></a>
+                    <div class="desc">
+                        <h5>Educovid</h5>
+                        <p>Second semester exam project</p>
+                    </div>
                   </div>
                   <div class="carousel-item">
-                    <a href="https://rkexpo.netlify.app/"><img class="d-block w-50" src="4thsemester.PNG" alt="Third slide"></a>
-                    <h1>Fourth semester projekt</h1>
-                    <p>Our final projekt to get the AP degree was creating a new website with a functioning calculator for RKExpo</p>
+                    <a href="https://rkexpo.netlify.app"><img class="d-block w-75" src="4thsemester.PNG" alt="Third slide"></a>
+                    <div class="desc">
+                        <h5>RKExpo</h5>
+                        <p>Our final project was to create a new website for RKExpo with a funcational calculator</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <a href="https://github.com/sztivi01/sifter-haz-bt"><img class="d-block w-50" src="view3.jpg" alt="Fourth slide"></a>
+                    <div class="">
+                        <h5>Sifter-ház</h5>
+                        <p>Wordpress website created for Sifter-ház bt. with custom theme and php.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <a href="https://github.com/sztivi01/DWP"><img class="d-block w-75" src="deepbook.png" alt="Fifth slide"></a>
+                    <div class="">
+                        <h5>Deepbook</h5>
+                        <p>In the first semester during the PBA programme we created a photo sharing social media using vanilla PHP and MySQL</p>
+                    </div>
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -126,7 +147,7 @@
                     <div class="text">My creative skills & experiences</div>
                     <p>I finished an AP programme in Multimedia Design and during those 2 years I had the chance to learn about Web-development,design and a little bit about business as well .
                         During those two year I figured I am mostly interested in coding related fields and a little bit of UI/UX designing.Since I have finished the AP programme I decided to continue in Esbjerg at EASV to study Web development Top-up.
-                        Currently we are learning about back-end programming in PHP and also about databases.
+                        
                     </p>
                 </div>
                 <div class="column right">
